# UIProject

./: .gitignore  CMakeLists.txt  README.md  README.zh.md
config/: theme.json
src/: main.cpp
src/Application/: application.cpp  application.hpp
src/factory/: ui_factory.cpp  ui_factory.hpp
src/file/: file_manager.cpp  file_manager.hpp
src/image_process/: image_processor.cpp  image_processor.hpp  strategy.cpp  strategy.hpp
src/logger/: logger_facade.cpp  logger_facade.hpp
src/model/: user_model.cpp  user_model.hpp
src/renderer/: renderer_facade.cpp  renderer_facade.hpp
src/theme/: theme_manager.cpp  theme_manager.hpp
src/view/: user_view.cpp  user_view.hpp
